fix-animation issue and remove extra margins

--- a/src/style/components/AboutSection.scss
+++ b/src/style/components/AboutSection.scss
@@ -18,7 +18,7 @@
     }
 
     .para {
-        margin-top: 2rem;
+        padding-top: 2rem;
         margin-left: 0;
     }
 
@@ -31,7 +31,6 @@
         align-items: center;
         justify-content: flex-start;
         gap: 2rem;
-        margin-top: 2rem;
     }
 
     @media only screen and (max-width: 950px) {
@@ -56,7 +55,7 @@
         }
 
         .aboutSection__right {
-            margin-top: 3rem;
+            // placeholder
         }
 
         .section-title {
@@ -64,8 +63,7 @@
         }
 
         .para {
-            margin: 0 auto;
-            margin-top: 2rem;
+            padding-top: 2rem;
         }
 
         .aboutSection__buttons {
