--- a/src/style/components/Button.scss
+++ b/src/style/components/Button.scss
@@ -1,5 +1,5 @@
 .button-wrapper {
-  margin-top: 2rem;
+  padding-top: 2rem;
   .button {
     font-size: 2.2rem;
     background-color: var(--OnPrimary);
